FEC-5689 #comment fix watermark z-index

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -1606,6 +1606,9 @@ background-image:  linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transpa
 	position: absolute;
 	padding: 5px;
 }
+.mobileSkin:not(.pluginsScreenOpened) .watermark {
+    z-index: 2;
+}
 .watermark img{
 	border: 0px;
 }
